ci: fix cosign execution
The token used by GitHub actions needs write permission for the id-token
scope in order to achieve identity-based (e.g. "keyless") signing.

Signed-off-by: Simon Pasquier <spasquie@redhat.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,6 +13,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     name: Publish container images
     steps:
       - name: Checkout
