Add automountServiceAccountToken option to alertmanager spec
Signed-off-by: stgrace <stefgraces@hotmail.com>

--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
@@ -1475,6 +1475,13 @@ spec:
                       type: object
                     type: array
                 type: object
+              automountServiceAccountToken:
+                description: 'If you don''t want the kubelet to automatically mount
+                  a ServiceAccount''s API credentials, you can opt out of the default
+                  behavior. You can opt out of automounting API credentials on /var/run/secrets/kubernetes.io/serviceaccount/token
+                  for a pod by setting automountServiceAccountToken: false on the
+                  pod spec.'
+                type: boolean
               baseImage:
                 description: 'Base image that is used to deploy pods, without tag.
                   Deprecated: use ''image'' instead'
