Implement UpdateStatus() for ThanosRuler
Signed-off-by: Simon Pasquier <spasquie@redhat.com>

--- a/example/rbac/prometheus-operator/prometheus-operator-cluster-role.yaml
+++ b/example/rbac/prometheus-operator/prometheus-operator-cluster-role.yaml
@@ -22,6 +22,7 @@ rules:
   - prometheusagents/status
   - thanosrulers
   - thanosrulers/finalizers
+  - thanosrulers/status
   - servicemonitors
   - podmonitors
   - probes
