--- a/bundle.yaml
+++ b/bundle.yaml
@@ -37773,6 +37773,8 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
+        seccompProfile:
+          type: RuntimeDefault
       serviceAccountName: prometheus-operator
 ---
 apiVersion: v1
