--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
@@ -6888,6 +6888,12 @@ spec:
               web:
                 description: Defines the web command line flags when starting Alertmanager.
                 properties:
+                  getConcurrency:
+                    description: Maximum number of GET requests processed concurrently.
+                      This corresponds to the Alertmanager's `--web.get-concurrency`
+                      flag.
+                    format: int32
+                    type: integer
                   httpConfig:
                     description: Defines HTTP parameters for web server.
                     properties:
@@ -6935,6 +6941,11 @@ spec:
                           a rolling update will be triggered.
                         type: boolean
                     type: object
+                  timeout:
+                    description: Timeout for HTTP requests. This corresponds to the
+                      Alertmanager's `--web.timeout` flag.
+                    format: int32
+                    type: integer
                   tlsConfig:
                     description: Defines the TLS parameters for HTTPS.
                     properties:
