--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -1488,6 +1488,10 @@
                           "items": {
                             "description": "PushoverConfig configures notifications via Pushover. See https://prometheus.io/docs/alerting/latest/configuration/#pushover_config",
                             "properties": {
+                              "device": {
+                                "description": "The name of one of the devices to send the notification to",
+                                "type": "string"
+                              },
                               "expire": {
                                 "description": "How long your notification will continue to be retried for, unless the user acknowledges the notification.",
                                 "pattern": "^(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?$",
@@ -1868,10 +1872,6 @@
                               "sendResolved": {
                                 "description": "Whether or not to notify about resolved alerts.",
                                 "type": "boolean"
-                              },
-                              "device": {
-                                "description": "The name of the device to send the notification to.",
-                                "type": "string"
                               },
                               "sound": {
                                 "description": "The name of one of the sounds supported by device clients to override the user's default sound choice",
