--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -1489,7 +1489,7 @@
                             "description": "PushoverConfig configures notifications via Pushover. See https://prometheus.io/docs/alerting/latest/configuration/#pushover_config",
                             "properties": {
                               "device": {
-                                "description": "The name of one of the devices to send the notification to",
+                                "description": "The name of a device to send the notification to",
                                 "type": "string"
                               },
                               "expire": {
