--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -1406,8 +1406,8 @@ spec:
                           See https://prometheus.io/docs/alerting/latest/configuration/#pushover_config
                         properties:
                           device:
-                            description: The name of one of the devices to send the
-                              notification to
+                            description: The name of a device to send the notification
+                              to
                             type: string
                           expire:
                             description: How long your notification will continue
@@ -5771,9 +5771,8 @@ spec:
                           See https://prometheus.io/docs/alerting/latest/configuration/#pushover_config
                         properties:
                           device:
-                            description: The name of one of the sounds supported by
-                              device clients to override the user's default sound
-                              choice
+                            description: The name of a device to send the notification
+                              to
                             type: string
                           expire:
                             description: How long your notification will continue
