--- a/bundle.yaml
+++ b/bundle.yaml
@@ -17072,7 +17072,7 @@ spec:
               podMonitorSelector:
                 description: "*Experimental* PodMonitors to be selected for target
                   discovery. \n If `spec.serviceMonitorSelector`, `spec.podMonitorSelector`,
-                  `spec.ProbeSelector` and `spec.scrapeConfigSelector` are null, the
+                  `spec.probeSelector` and `spec.scrapeConfigSelector` are null, the
                   Prometheus configuration is unmanaged. The Prometheus operator will
                   ensure that the Prometheus configuration's Secret exists, but it
                   is the responsibility of the user to provide the raw gzipped Prometheus
@@ -25414,7 +25414,7 @@ spec:
               podMonitorSelector:
                 description: "*Experimental* PodMonitors to be selected for target
                   discovery. \n If `spec.serviceMonitorSelector`, `spec.podMonitorSelector`,
-                  `spec.ProbeSelector` and `spec.scrapeConfigSelector` are null, the
+                  `spec.probeSelector` and `spec.scrapeConfigSelector` are null, the
                   Prometheus configuration is unmanaged. The Prometheus operator will
                   ensure that the Prometheus configuration's Secret exists, but it
                   is the responsibility of the user to provide the raw gzipped Prometheus
