--- a/bundle.yaml
+++ b/bundle.yaml
@@ -17831,7 +17831,7 @@ spec:
                   for use with `kubectl proxy`.
                 type: string
               scrapeConfigNamespaceSelector:
-                description: Namespace's labels to match for ServiceMonitor discovery.
+                description: Namespace's labels to match for ScrapeConfig discovery.
                   If nil, only check own namespace.
                 properties:
                   matchExpressions:
@@ -26711,7 +26711,7 @@ spec:
                     type: object
                 type: object
               scrapeConfigNamespaceSelector:
-                description: Namespace's labels to match for ServiceMonitor discovery.
+                description: Namespace's labels to match for ScrapeConfig discovery.
                   If nil, only check own namespace.
                 properties:
                   matchExpressions:
