--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -5678,7 +5678,7 @@ spec:
                     type: object
                 type: object
               scrapeConfigNamespaceSelector:
-                description: Namespace's labels to match for ServiceMonitor discovery.
+                description: Namespace's labels to match for ScrapeConfig discovery.
                   If nil, only check own namespace.
                 properties:
                   matchExpressions:
