fix: Missing permissions for prometheus-operator's serviceaccount

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -38139,6 +38139,7 @@ rules:
   - thanosrulers
   - thanosrulers/finalizers
   - thanosrulers/status
+  - scrapeconfigs
   - servicemonitors
   - podmonitors
   - probes
