--- a/example/rbac/prometheus-operator/prometheus-operator-cluster-role.yaml
+++ b/example/rbac/prometheus-operator/prometheus-operator-cluster-role.yaml
@@ -23,6 +23,7 @@ rules:
   - thanosrulers
   - thanosrulers/finalizers
   - thanosrulers/status
+  - scrapeconfigs
   - servicemonitors
   - podmonitors
   - probes
