--- a/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
@@ -66,6 +66,10 @@ spec:
                   - files
                   type: object
                 type: array
+              honorTimestamps:
+                description: HonorTimestamps controls whether Prometheus respects
+                  the timestamps present in scraped data.
+                type: boolean
               httpSDConfigs:
                 description: HTTPSDConfigs list of HTTP service discovery configurations.
                 items:
