--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_scrapeconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_scrapeconfigs.yaml
@@ -66,6 +66,10 @@ spec:
                   - files
                   type: object
                 type: array
+              honorLabels:
+                description: HonorLabels chooses the metric's labels on collisions
+                  with target labels.
+                type: boolean
               honorTimestamps:
                 description: HonorTimestamps controls whether Prometheus respects
                   the timestamps present in scraped data.
