--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -45,12 +45,12 @@
                 "description": "ScrapeConfigSpec is a specification of the desired configuration for a scrape configuration.",
                 "properties": {
                   "fileSDConfigs": {
-                    "description": "FileSDConfigs list of file service discovery configurations.",
+                    "description": "FileSDConfigs defines a list of file service discovery configurations.",
                     "items": {
-                      "description": "FileSDConfig defines a prometheus file service discovery configuration See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#file_sd_config",
+                      "description": "FileSDConfig defines a Prometheus file service discovery configuration See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#file_sd_config",
                       "properties": {
                         "files": {
-                          "description": "List of files to be used for file discovery. Recommendation: use absolute paths. While relative paths work, the prometheus-operator project can't guarantee that the working directory will stay the same over time. Files must be mounted using Prometheus.ConfigMaps or Prometheus.Secrets.",
+                          "description": "List of files to be used for file discovery. Recommendation: use absolute paths. While relative paths work, the prometheus-operator project makes no guarantees about the working directory where the configuration file is stored. Files must be mounted using Prometheus.ConfigMaps or Prometheus.Secrets.",
                           "items": {
                             "type": "string"
                           },
@@ -79,7 +79,7 @@
                     "type": "boolean"
                   },
                   "httpSDConfigs": {
-                    "description": "HTTPSDConfigs list of HTTP service discovery configurations.",
+                    "description": "HTTPSDConfigs defines a list of HTTP service discovery configurations.",
                     "items": {
                       "description": "HTTPSDConfig defines a prometheus HTTP service discovery configuration See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#http_sd_config",
                       "properties": {
@@ -107,7 +107,7 @@
                     "type": "string"
                   },
                   "relabelings": {
-                    "description": "RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config",
+                    "description": "RelabelConfigs defines how to rewrite the target's labels before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config",
                     "items": {
                       "description": "RelabelConfig allows dynamic rewriting of the label set, being applied to samples before ingestion. It defines `<metric_relabel_configs>`-section of Prometheus configuration. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#metric_relabel_configs",
                       "properties": {
@@ -176,9 +176,9 @@
                     "type": "array"
                   },
                   "staticConfigs": {
-                    "description": "StaticConfigs list of labeled statically configured targets for this job.",
+                    "description": "StaticConfigs defines a list of static targets with a common label set.",
                     "items": {
-                      "description": "StaticConfig defines a prometheus static configuration See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#scrape_config",
+                      "description": "StaticConfig defines a Prometheus static configuration. See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#scrape_config",
                       "properties": {
                         "labels": {
                           "additionalProperties": {
@@ -188,11 +188,9 @@
                           "type": "object"
                         },
                         "targets": {
-                          "description": "List of targets for this static configuration",
+                          "description": "List of targets for this static configuration.",
                           "items": {
                             "description": "Target represents a target for Prometheus to scrape",
-                            "minLength": 1,
-                            "pattern": "[^/]+",
                             "type": "string"
                           },
                           "type": "array"
