--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
@@ -4131,7 +4131,7 @@ spec:
               probeSelector:
                 description: "*Experimental* Probes to be selected for target discovery.
                   \n If `spec.serviceMonitorSelector`, `spec.podMonitorSelector`,
-                  `spec.ProbeSelector` and `spec.scrapeConfigSelector` are null, the
+                  `spec.probeSelector` and `spec.scrapeConfigSelector` are null, the
                   Prometheus configuration is unmanaged. The Prometheus operator will
                   ensure that the Prometheus configuration's Secret exists, but it
                   is the responsibility of the user to provide the raw gzipped Prometheus
