--- a/bundle.yaml
+++ b/bundle.yaml
@@ -30512,6 +30512,8 @@ spec:
                         the configuration file is stored. Files must be mounted using
                         Prometheus.ConfigMaps or Prometheus.Secrets.'
                       items:
+                        description: SDFile represents a file used for service discovery
+                        pattern: ^[^*]*(\*[^/]*)?\.(json|yml|yaml|JSON|YML|YAML)$
                         type: string
                       minItems: 1
                       type: array
@@ -30647,6 +30649,7 @@ spec:
                       description: Labels assigned to all metrics scraped from the
                         targets.
                       type: object
+                      x-kubernetes-map-type: atomic
                     targets:
                       description: List of targets for this static configuration.
                       items:
@@ -30654,8 +30657,6 @@ spec:
                           scrape
                         type: string
                       type: array
-                  required:
-                  - targets
                   type: object
                 type: array
             type: object
