--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
@@ -4474,6 +4474,11 @@ spec:
                         enableFeature option for exemplars to be scraped in the first
                         place.  Only valid in Prometheus versions 2.27.0 and newer.
                       type: boolean
+                    sendNativeHistograms:
+                      description: Enables sending of native histograms, also known
+                        as sparse histograms over remote write. Only valid in Prometheus
+                        versions 2.40.0 and newer.
+                      type: boolean
                     sigv4:
                       description: Sigv4 allows to configures AWS's Signature Verification
                         4
