Add ScrapeConfigs to ObjectReference

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -15680,6 +15680,7 @@ spec:
                       - servicemonitors
                       - podmonitors
                       - probes
+                      - scrapeconfigs
                       type: string
                   required:
                   - namespace
@@ -24051,6 +24052,7 @@ spec:
                       - servicemonitors
                       - podmonitors
                       - probes
+                      - scrapeconfigs
                       type: string
                   required:
                   - namespace
@@ -33814,6 +33816,7 @@ spec:
                       - servicemonitors
                       - podmonitors
                       - probes
+                      - scrapeconfigs
                       type: string
                   required:
                   - namespace
